# course

./: .env_sample  .gitignore  README.md  pyproject.toml
mailing_project/: manage.py
mailing_project/clients/: auth_views.py  forms.py  models.py  urls.py  views.py
mailing_project/clients/management/commands/: send_mailing.py
mailing_project/clients/middleware/: cache_middleware.py
mailing_project/clients/migrations/: 0001_initial.py  0002_message.py  0003_mailing.py  0004_mailingattempt.py  0005_mailing_user.py  0006_mailing_is_active_alter_mailing_status_userprofile.py
mailing_project/clients/templates/clients/: activation_email.html  client_confirm_delete.html  client_form.html  client_list.html  login.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_confirm_disable.html  mailing_confirm_send.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  password_reset.html  register.html  (+7 more)
mailing_project/clients/templatetags/: client_tags.py
mailing_project/config/: settings.py
mailing_project/mailing/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
mailing_project/mailing/migrations/: 0001_initial.py  0002_initial.py
mailing_project/mailing/templates/: home.html
mailing_project/mailing_project/: asgi.py  settings.py  urls.py  wsgi.py
mailing_project/static/css/: bootstrap.min.css
mailing_project/users/: forms.py  models.py  urls.py  views.py
mailing_project/users/migrations/: 0001_initial.py
mailing_project/users/templates/: user_list.html
(+26 files in other folders)
